# gfun-mask

./: .gitignore  CLAUDE.md  Makefile  test_ws.swift
VoiceMaskApp/VoiceMaskApp/: ContentView.swift  Info.plist  VoiceMaskAppApp.swift
VoiceMaskApp/VoiceMaskApp.xcodeproj/: project.pbxproj
admin-web/: package-lock.json  package.json  vite.config.ts
admin-web/src/: App.tsx  index.css
docs/epic/: epic-01.md  iOS 实时语音外设互联架构设计方案.md
docs/feat/: feat-01-esp32-ios-ble-l2cap-hello-world.md  feat-02-esp32-audio-capture-opus-encoding.md  feat-03-ios-voice-chat-pipecat.md  feat-04-esp32-vad-voice-activity-detection.md  feat-04-pipeline-latency-logging.md  feat-05-pipecat-server-refactor.md  feat-06-esp32-gmf-core-framework-migration.md  feat-06-pipeline-latency-optimization.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  ble_gap.c  ble_gap.h  ble_gatts.c  ble_gatts.h  ble_l2cap.c  ble_l2cap.h  hello_timer.c  hello_timer.h  idf_component.yml  main.c
firmware/main/audio/: audio_driver.c  audio_driver.h  audio_driver_es7210.c  audio_pipeline.c  audio_pipeline.h  gmf_mic_io.c  gmf_mic_io.h  gmf_pcm_enc_el.c  gmf_pcm_enc_el.h  opus_encoder.c  opus_encoder.h
firmware/main/boards/: esp32_s3_box_lite.h
firmware/test/: CMakeLists.txt  test_psm_encode.c
pipecat-server/: .env  .env.example  admin_api.py  config.py  dashscope_services.py  db.py  latency.py  main.py  pipeline.py  requirements.txt  session.py  test_admin_api.py  test_db.py  test_latency.py  test_pipeline.py  test_protocol.py  test_session.py
pipecat-server/api/: admin.py
(+54 files in other folders)
